Closed Bug 135334 Opened 22 years ago Closed 22 years ago

crmfcgi.c leaks a reference to the internal key slot

Categories

(NSS :: Tools, defect, P2)

defect

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: wtc, Assigned: wtc)

Details

Attachments

(1 file)

The initNSS() function in crmfcgi.c calls PK11_GetInternalKeySlot()
but does not call PK11_FreeSlot() to free the slot reference.
Changed the QA contact to Bishakha.
QA Contact: sonja.mirtitsch → bishakhabanerjee
Attached patch Proposed patchSplinter Review
Patch checked into the tip of NSS.
Status: NEW → RESOLVED
Closed: 22 years ago
Priority: -- → P2
Resolution: --- → FIXED
Target Milestone: --- → 3.5
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: