Bugzilla bug 135334: free the internal key slot reference when we are done.